fix data pre-processing issue with \r

--- a/python_model/cnn_svm.ipynb
+++ b/python_model/cnn_svm.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -67,11 +67,11 @@
      "output_type": "stream",
      "text": [
       "Loading csv: \n",
-      "tennis\n",
-      "basketball\n",
-      "baseball\n",
-      "volleyball\n",
-      "football\n",
+      "  tennis\n",
+      "  basketball\n",
+      "  baseball\n",
+      "  hockey\n",
+      "  volleyball\n",
       "Note: pre-process changes the dataframe inplace.\n"
      ]
     },
@@ -91,15 +91,15 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>RT  Win this HEAD Pro Tennis Racket worth  RTa...</td>\n",
+       "      <td>RT SweatbandActive Win this HEAD Pro Tennis Ra...</td>\n",
        "      <td>4</td>\n",
-       "      <td>[win, head, pro, tennis, racket, worth, rtampf...</td>\n",
+       "      <td>[sweatbandactive, win, head, pro, tennis, rack...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>RT  US Davis Cup tennis captain Jim Courier th...</td>\n",
+       "      <td>RT cmailsport US Davis Cup tennis captain Jim ...</td>\n",
        "      <td>4</td>\n",
-       "      <td>[us, davis, cup, tennis, captain, jim, courier...</td>\n",
+       "      <td>[cmailsport, us, davis, cup, tennis, captain, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -109,15 +109,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>RT  best odds in the UK \\nfootball golf tennis...</td>\n",
+       "      <td>RT paddyspower best odds in the UK football go...</td>\n",
        "      <td>4</td>\n",
-       "      <td>[best, odds, uk, football, golf, tennis, premi...</td>\n",
+       "      <td>[paddyspower, best, odds, uk, football, golf, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>RT  Do you want a  Tennis Express gift card Si...</td>\n",
+       "      <td>RT TennisExpress Do you want a  Tennis Express...</td>\n",
        "      <td>4</td>\n",
-       "      <td>[want, tennis, express, gift, card, silly, que...</td>\n",
+       "      <td>[tennisexpress, want, tennis, express, gift, c...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -125,33 +125,67 @@
       ],
       "text/plain": [
        "                                                text  class  \\\n",
-       "0  RT  Win this HEAD Pro Tennis Racket worth  RTa...      4   \n",
-       "1  RT  US Davis Cup tennis captain Jim Courier th...      4   \n",
+       "0  RT SweatbandActive Win this HEAD Pro Tennis Ra...      4   \n",
+       "1  RT cmailsport US Davis Cup tennis captain Jim ...      4   \n",
        "2  What We Can Learn From Roger Federers Recent W...      4   \n",
-       "3  RT  best odds in the UK \\nfootball golf tennis...      4   \n",
-       "4  RT  Do you want a  Tennis Express gift card Si...      4   \n",
+       "3  RT paddyspower best odds in the UK football go...      4   \n",
+       "4  RT TennisExpress Do you want a  Tennis Express...      4   \n",
        "\n",
        "                                           tokenized  \n",
-       "0  [win, head, pro, tennis, racket, worth, rtampf...  \n",
-       "1  [us, davis, cup, tennis, captain, jim, courier...  \n",
+       "0  [sweatbandactive, win, head, pro, tennis, rack...  \n",
+       "1  [cmailsport, us, davis, cup, tennis, captain, ...  \n",
        "2  [learn, roger, federers, recent, winning, stre...  \n",
-       "3  [best, odds, uk, football, golf, tennis, premi...  \n",
-       "4  [want, tennis, express, gift, card, silly, que...  "
+       "3  [paddyspower, best, odds, uk, football, golf, ...  \n",
+       "4  [tennisexpress, want, tennis, express, gift, c...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sports_dic = {'basketball':1, 'football':2, 'baseball':3, 'tennis':4, 'volleyball':5}\n",
+    "sports_dic = {'basketball':1, 'hockey':2, 'baseball':3, 'tennis':4, 'volleyball':5}\n",
     "sp_data = Data(sports_dic, FILE_PATH)\n",
     "sp_df = sp_data.csv_df(['text']) # load data\n",
     "sp_data.pre_process(sp_df) # pre-process data\n",
-    "# drop neutral\n",
-    "# airline_df = airline_data.drop_value(airline_df, 'airline_sentiment', 'neutral')\n",
+    "# save this to csv \n",
+    "sp_df.to_csv(FILE_PATH+'data/all_sports.csv', index=False)\n",
     "sp_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# lets take a look of the \n",
+    "sp_df['class'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'RT MiDigitalIT  and Never give up your passion Photograph Photo Sport Dreams Street Basketball Sport '"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp_df.loc[11626,:].text"
    ]
   },
   {
@@ -160,95 +194,13 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "44755"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(sp_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "bb_df.loc[:,'class']=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "bb_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# convert categorical value to int class\n",
-    "# class_label = {'positive': 1, 'negative': 2}\n",
-    "class_label = {'positive': 1, 'neutral': 2, 'negative': 3}\n",
-    "\n",
-    "airline_df = airline_data.cat2num(airline_df, 'airline_sentiment', class_label, 'class')\n",
-    "airline_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# lets take a look of the \n",
-    "airline_df['class'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [],
    "source": [
     "# comment out if do not want class balance\n",
-    "airline_df = airline_data.balance_class(airline_df)\n",
-    "# and check again\n",
-    "airline_df['class'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "airline_df.head()"
+    "\n",
+    "# airline_df = airline_data.balance_class(airline_df)\n",
+    "# # and check again\n",
+    "# airline_df['class'].value_counts()"
    ]
   },
   {
@@ -258,10 +210,19 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading existing model tweets300.model.bin ...\n",
+      "Done building.\n"
+     ]
+    }
+   ],
    "source": [
     "# train or load the model\n",
-    "model = airline_data.build_wordvec(size=600, verbose=False)"
+    "model = sp_data.build_wordvec(size=300, verbose=False)"
    ]
   },
   {
@@ -271,14 +232,24 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max sentence length is:  24\n",
+      ">>>0tweets converted ...\n",
+      ">>>2000tweets converted ...\n"
+     ]
+    }
+   ],
    "source": [
     "# max_len is the max length of a sentence in our data, this decides the padding\n",
-    "max_len = airline_data.max_len(airline_df)\n",
+    "max_len = sp_data.max_len(sp_df)\n",
     "# convert our aline data to vector\n",
-    "data = airline_data.convert2vec(airline_df, max_len, model, name='airline-3class-600')\n",
+    "data = sp_data.convert2vec(sp_df, max_len, model, name='sports-300')\n",
     "#data = airline_data.standarize(data)\n",
-    "airline_data.save_vec(data, name='airline-3class-600')"
+    "sp_data.save_vec(data, name='sports-300')"
    ]
   },
   {
@@ -311,7 +282,7 @@
     "N, M, D = data.shape\n",
     "print \"N, M, D:\", N, M, D\n",
     "data = data.reshape(-1, 1, M, D).astype(theano.config.floatX) # theano needs this way\n",
-    "label = airline_df['class']\n",
+    "label = sp_df['class']\n",
     "label = np.int8(label) - 1# seems like theano also needs this\n",
     "print data.shape\n",
     "print label.shape"
@@ -327,7 +298,7 @@
    "source": [
     "# train our model or load model if it exists\n",
     "def train_cnn(net, X_train, y_train, model_name='nn_cnn'):\n",
-    "    model_file = FILE_PATH+'nn_cnn'\n",
+    "    model_file = FILE_PATH+'model/nn_cnn'\n",
     "    if os.path.isfile(model_file):\n",
     "        print (\"Loading existing model ...\")\n",
     "        net.load_params_from(model_file)\n",
