fix pre-processing symbols from empty string to space

--- a/python_model/cnn_svm.ipynb
+++ b/python_model/cnn_svm.ipynb
@@ -55,10 +55,23 @@
     "sports_dic = {'basketball':1, 'hockey':2, 'baseball':3, 'tennis':4, 'volleyball':5}\n",
     "sp_data = Data(sports_dic, FILE_PATH)\n",
     "sp_df = sp_data.csv_df(['text']) # load data\n",
-    "sp_data.pre_process(sp_df) # pre-process data\n",
+    "rm_hashtags = ['#'+s for s in sports_dic.keys()]\n",
+    "sp_data.pre_process(sp_df, rm_list=rm_hashtags) # pre-process data\n",
     "# save this to csv \n",
     "sp_df.to_csv(FILE_PATH+'data/all_sports.csv', index=False)\n",
     "sp_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# if you want to save the processed file to csv\n",
+    "sp_df.to_csv('../files/data/all_sports_new.csv', index=False)"
    ]
   },
   {
@@ -98,7 +111,7 @@
    "outputs": [],
    "source": [
     "# train or load the model\n",
-    "model = sp_data.build_wordvec(size=300, verbose=False)"
+    "model = sp_data.build_wordvec(size=600, verbose=False)"
    ]
   },
   {
@@ -113,9 +126,9 @@
     "# max_len is the max length of a sentence in our data, this decides the padding\n",
     "max_len = sp_data.max_len(sp_df)\n",
     "# convert our aline data to vector\n",
-    "data = sp_data.convert2vec(sp_df, max_len, model, name='sports-300')\n",
+    "data = sp_data.convert2vec(sp_df, max_len, model, name='sports-600')\n",
     "#data = airline_data.standarize(data)\n",
-    "sp_data.save_vec(data, name='sports-300')"
+    "sp_data.save_vec(data, name='sports-600')"
    ]
   },
   {
@@ -163,8 +176,8 @@
    "outputs": [],
    "source": [
     "# train our model or load model if it exists\n",
-    "def train_cnn(net, X_train, y_train, model_name='nn_cnn'):\n",
-    "    model_file = FILE_PATH+'model/nn_cnn'\n",
+    "def train_cnn(net, X_train, y_train, model_name='nn_cnn001'):\n",
+    "    model_file = FILE_PATH+'model/' + model_name\n",
     "    if os.path.isfile(model_file):\n",
     "        print (\"Loading existing model ...\")\n",
     "        net.load_params_from(model_file)\n",
@@ -210,10 +223,10 @@
    "source": [
     "# now transfer to svm\n",
     "# stratified cross-validation\n",
-    "sss = StratifiedShuffleSplit(n_splits=5, test_size=0.2, random_state=0)\n",
+    "sss = StratifiedShuffleSplit(n_splits=5, test_size=0.25, random_state=0)\n",
     "n_cv = 1\n",
     "for train_index, val_index in sss.split(data, label):\n",
-    "\n",
+    "    t1 = time.time()\n",
     "    data_train, data_val = data[train_index], data[val_index]\n",
     "    label_train, label_val = label[train_index], label[val_index]\n",
     "    \n",
@@ -229,9 +242,13 @@
     "    print \"Training cv {} ...\".format(n_cv)\n",
     "    clf.fit(extract_train, label_train)\n",
     "    acc = clf.score(extract_val, label_val)\n",
+    "    t2 = time.time()\n",
+    "    \n",
     "    print acc\n",
     "    print \"\\n\"\n",
-    "    n_cv += 1"
+    "    print \"Time took: {0:.2f} min\".format((t2-t1)/60)\n",
+    "    n_cv += 1\n",
+    "    "
    ]
   },
   {
@@ -245,6 +262,15 @@
     "# save model\n",
     "joblib.dump(clf, FILE_PATH+'svm-final.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -272,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
