add stratified split cv

--- a/python_model/cnn_svm.ipynb
+++ b/python_model/cnn_svm.ipynb
@@ -2,22 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using cuDNN version 5110 on context None\n",
-      "Mapped name None to device cuda: GeForce GTX 965M (0000:01:00.0)\n",
-      "/home/sam/anaconda2/lib/python2.7/site-packages/sklearn/cross_validation.py:44: DeprecationWarning: This module was deprecated in version 0.18 in favor of the model_selection module into which all the refactored classes and functions are moved. Also note that the interface of the new CV iterators are different from that of this module. This module will be removed in 0.20.\n",
-      "  \"This module will be removed in 0.20.\", DeprecationWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -293,7 +282,8 @@
      "text": [
       "N, M, D: 44755 23 600\n",
       "(44755, 1, 23, 600)\n",
-      "(44755,)\n"
+      "(44755,)\n",
+      "label saved as ../files/data/labels\n"
      ]
     }
    ],
@@ -310,6 +300,10 @@
     "n_classes = 5\n",
     "label = np.eye(n_classes, dtype=int)[label.values-1]\n",
     "# save the one-hot-enconded labels\n",
+    "# i.e. classes, 1-5\n",
+    "#1 = [1, 0, 0, 0, 0]\n",
+    "#2 = [0, 1, 0, 0, 0]\n",
+    "\n",
     "file_name = FILE_PATH+'data/labels'\n",
     "np.save(file_name, label)\n",
     "print \"label saved as {}\".format(file_name)"
@@ -428,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
